--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -8,7 +8,7 @@ body {
   border: 3px solid blue;
   /* CHANGE ME */
   padding: 32px;
-  margin: 0px;
+  margin: 12px;
 }
 
 .two {
@@ -24,5 +24,5 @@ body {
   width: 200px;
   /* CHANGE ME */
   padding: 32px;
-  margin-left: 0px;
+  margin-left: auto;
 }
